# temples-engine

./: .gitignore  LICENSE  README.md  package.json  pnpm-workspace.yaml
contracts/: Cargo.toml  build.rs
contracts/metadata/: Cargo.toml
contracts/metadata/src/: lib.rs
contracts/schema/: Cargo.toml
contracts/schema/src/: counter.rs  level.rs  lib.rs  storage.rs
contracts/src/: handle.rs  init.rs  lib.rs  state.rs  world.rs
contracts/systems/: Cargo.toml
contracts/systems/src/: counter_system.rs  level_system.rs  lib.rs
contracts/tests/: tests.rs
examples/counter/: build.rs
examples/counter/io/: Cargo.toml
examples/counter/src/: lib.rs
